# issuetruck

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
issuetruck/: __init__.py  app.py  compose.py  issue.py  markdown.py
tests/: test_compose.py  test_issue.py  test_issuetruck.py  test_markdown.py
