[tool.poetry]
name = "IssueTruck"
version = "1.6.0-alpha.1"
description = ""
authors = ["Francesco <francesco.209@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.7.0"}

[tool.poetry.dev-dependencies]
pytest = "^7.2.1"
black = "^23.1.0"
coverage = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "issuetruck.app:app"